--- a/TabellStabelMedUnntak/.project
+++ b/TabellStabelMedUnntak/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TabellStabelMedUnntak</name>
+	<name>TabellStabelMedUnntakFyllUt</name>
 	<comment></comment>
 	<projects>
 	</projects>
