--- a/TabellStabelUtenUnntak/.project
+++ b/TabellStabelUtenUnntak/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TabellStabelUtenUnntak</name>
+	<name>TabellStabelUtenUnntakFyllUt</name>
 	<comment></comment>
 	<projects>
 	</projects>
